--- a/html2/tamrin/personal_site.html
+++ b/html2/tamrin/personal_site.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Sepehr Kordrostami</title>
+    <link rel="stylesheet" href="../css/personal_site_style.css">
 </head>
 <body>
 
