--- a/html2/tamrin/personal_site.html
+++ b/html2/tamrin/personal_site.html
@@ -11,6 +11,13 @@
 
             Sepehr Kordrostami
         </header>
+        <nav>
+            <a class="nav-link" href="">Home</a>
+            <a class="nav-link" href="">About</a>
+            <a class="nav-link" href="">Contact</a>
+            <a class="nav-link" href="">Projects</a>
+            <a class="nav-link" href="">CV</a>
+        </nav>
 
 
     </div>
