--- a/html2/tamrin/personal_site.html
+++ b/html2/tamrin/personal_site.html
@@ -18,9 +18,16 @@
             <a class="nav-link" href="">Projects</a>
             <a class="nav-link" href="">CV</a>
         </nav>
+        <div class="title">
+            I'm<br>
+            Front-End Developer
 
-
+        </div>
     </div>
+
+
+
+
 
 
 
