--- a/html2/tamrin/personal_site.html
+++ b/html2/tamrin/personal_site.html
@@ -20,7 +20,7 @@
         </nav>
         <div class="title">
             I'm<br>
-            Front-End Developer
+            <span class="front-end">Front-End</span> Developer
 
         </div>
     </div>
