--- a/html2/tamrin/personal_site.html
+++ b/html2/tamrin/personal_site.html
@@ -18,9 +18,8 @@
             <a class="nav-link" href="">Projects</a>
             <a class="nav-link" href="">CV</a>
         </nav>
-        <div class="title">
-            I'm<br>
-            <span class="front-end">Front-End</span> Developer
+        <div class="title"><br>
+            I'm <span class="front-end">Front-End</span> Developer
 
         </div>
     </div>
