--- a/bootstrap2/2-row-column.html
+++ b/bootstrap2/2-row-column.html
@@ -16,13 +16,13 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-sm">
+        <div class="col-sm bg-primary">
             One of three columns
         </div>
-        <div class="col-sm">
+        <div class="col-sm bg-danger">
             One of three columns
         </div>
-        <div class="col-sm">
+        <div class="col-sm bg-warning">
             One of three columns
         </div>
     </div>
