--- a/bootstrap2/test/first.html
+++ b/bootstrap2/test/first.html
@@ -18,21 +18,21 @@
 
 
     <div class="row">
-        <div class="col bg-success">
+        <div class="col-sm bg-success">
             1 of 3
         </div>
-        <div class="col bg-secondary">
+        <div class="col-sm bg-secondary">
             2 of 3
         </div>
-        <div class="col bg-danger">
+        <div class="col-sm bg-danger" style="background-color: aqua !important;">
             3 of 3
         </div>
     </div>
     <div class="row">
-        <div class="col bg-warning">
+        <div class="col-sm-10 bg-warning">
             1 of 2
         </div>
-        <div class="col bg-info">
+        <div class="col-sm-2 bg-info">
             2 of 2
         </div>
     </div>
