--- a/bootstrap2/table2.html
+++ b/bootstrap2/table2.html
@@ -16,7 +16,7 @@
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 
 
-<table class="table table-danger">
+<table class="table table-hover table-dark">
     <thead>
     <tr>
         <th scope="col">#</th>
@@ -32,7 +32,7 @@
         <td>Otto</td>
         <td>@mdo</td>
     </tr>
-    <tr class="table-warning">
+    <tr>
         <th scope="row">2</th>
         <td>Jacob</td>
         <td>Thornton</td>
@@ -41,7 +41,7 @@
     <tr>
         <th scope="row">3</th>
         <td colspan="2">Larry the Bird</td>
-        <td class="table-dark">@twitter</td>
+        <td>@twitter</td>
     </tr>
     </tbody>
 </table>
