--- a/bootstrap2/test/form.html
+++ b/bootstrap2/test/form.html
@@ -17,12 +17,12 @@
         <div class="clo-4">
 
 
-            <h1> Create account</h1>
+            <p class="h2 text-center">Create Account</p>
 
             <form>
                 <div class="mb-3">
                     <label class="form-label">Fullname</label>
-                    <input class="form-control">
+                    <input class="form-control" type="text">
 
                 </div>
                 <div class="mb-3">
@@ -48,9 +48,6 @@
     </div>
 </div>
 
-<script crossorigin="anonymous" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
-\
 
 </body>
 </html>
