--- a/bootstrap2/test/form.html
+++ b/bootstrap2/test/form.html
@@ -14,7 +14,7 @@
 <body>
 <div class="container">
     <div class="row mt-5 justify-content-center">
-        <div class="clo-4">
+        <div class="col-4">
 
 
             <p class="h2 text-center">Create Account</p>
