--- a/bootstrap2/test/Get_In_Touch.html
+++ b/bootstrap2/test/Get_In_Touch.html
@@ -36,7 +36,7 @@
                     <div class="mb-3">
                         <label class="form-label" for="comment">Message*</label>
 
-                        <textarea cols="50" id="comment" name="comment" rows="4" style="width: 100%"></textarea>
+                        <textarea cols="50" id="comment" name="comment" rows="4" style="width: 100%; border-color: #730D3D"></textarea>
                     </div>
 
 
